# pet-sales-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: custom_tools.py  pet_agent.py  rag_tools.py  system_prompt.py
app/api/: deps.py  middleware.py  server.py
app/cnn/: dataset.py  evaluate.py  inference.py  model.py  train.py
app/common/: config.py  container.py  exceptions.py  logger.py
app/models/: schemas.py
data/: after_sales.txt  breed_info.txt  breeds_encyclopedia.txt  care_guide.txt  health.txt  pricing.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ChatInput.vue  ChatMessage.vue  ImagePreview.vue  PawPrints.vue  Sidebar.vue  StreamingToken.vue
frontend/src/composables/: useSession.js
scripts/: build_rag_data.py  download_dataset.py  generate_knowledge_base.py
tests/: conftest.py  test_agent.py  test_api.py  test_cnn.py  test_config.py
