[project]
name = "pet"
version = "0.1.0"
description = "宠物销售智能客服助手"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "openai>=2.15.0",
    "matplotlib>=3.10.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.2.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.0",
    "sentence-transformers>=4.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.29",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"
